EXTRA_DIST = \
    Account_Interface_Avatar.xml \
    Account_Manager.xml \
    Account.xml \
    all.xml \
    Channel_Dispatch_Operation.xml \
    Channel_Dispatcher.xml \
    Channel_Dispatcher_Interface_Operation_List.xml \
    Channel_Future.xml \
    Channel_Handler.xml \
    Channel_Interface_Call_Merging.xml \
    Channel_Interface_Call_State.xml \
    Channel_Interface_Chat_State.xml \
    Channel_Interface_Destroyable.xml \
    Channel_Interface_DTMF.xml \
    Channel_Interface_Group.xml \
    Channel_Interface_Hold.xml \
    Channel_Interface_HTML.xml \
    Channel_Interface_Media_Signalling.xml \
    Channel_Interface_Messages.xml \
    Channel_Interface_Password.xml \
    Channel_Interface_Transfer.xml \
    Channel_Interface_Tube.xml \
    Channel_Request.xml \
    Channel_Type_Contact_List.xml \
    Channel_Type_Contact_Search.xml \
    Channel_Type_DBus_Tube.xml \
    Channel_Type_File_Transfer.xml \
    Channel_Type_Room_List.xml \
    Channel_Type_Stream_Tube.xml \
    Channel_Type_Streamed_Media.xml \
    Channel_Type_Text.xml \
    Channel_Type_Tubes.xml \
    Channel.xml \
    Client.xml \
    Client_Approver.xml \
    Client_Handler.xml \
    Client_Interface_Requests.xml \
    Client_Observer.xml \
    Connection_Interface_Aliasing.xml \
    Connection_Interface_Avatars.xml \
    Connection_Interface_Capabilities.xml \
    Connection_Interface_Contact_Capabilities.xml \
    Connection_Interface_Contact_Info.xml \
    Connection_Interface_Contacts.xml \
    Connection_Interface_Forwarding.xml \
    Connection_Interface_Location.xml \
    Connection_Interface_Presence.xml \
    Connection_Interface_Privacy.xml \
    Connection_Interface_Renaming.xml \
    Connection_Interface_Requests.xml \
    Connection_Interface_Simple_Presence.xml \
    Connection_Manager.xml \
    Connection.xml \
    Debug.xml \
    errors.xml \
    generic-types.xml \
    Media_Session_Handler.xml \
    Media_Stream_Handler.xml \
    Properties_Interface.xml
